--- a/AM3/AM3-Ć-skrypt/AM3-Ć-skrypt.tex
+++ b/AM3/AM3-Ć-skrypt/AM3-Ć-skrypt.tex
@@ -11,6 +11,16 @@
 \usepackage{enumitem}
 \usepackage{amssymb} % Symbole matematyczne, w tym \mathbb
 \usepackage{multicol}
+\usepackage[most]{tcolorbox}
+\tcbset{
+  mybox/.style={
+    colback=gray!5, % kolor tła
+    colframe=black, % kolor ramki
+    boxrule=0.5pt,  % grubość ramki
+    arc=2pt,        % zaokrąglenie rogów
+    left=6pt,right=6pt,top=6pt,bottom=6pt
+  }
+}
 
 % Ustawienia strony
 \geometry{margin=2cm}
@@ -18,6 +28,8 @@
 % Nagłówek
 \pagestyle{fancy}
 \fancyhf{} % Czyszczenie nagłówków i stopek
+\fancyhead[C]{AM3-Ć-skrypt}
+\fancyhead[R]{\thepage} % numer strony po prawej
 \renewcommand{\headrulewidth}{0pt} % Usunięcie linii w nagłówku
 
 
@@ -32,9 +44,69 @@
 \begin{document}
 
 % treść wykładu
-\zagadnienie{AM3-W1, 08.10.25 (niesformatowane z wykładem) (bez uzupełnionych dowodów)}{}
+\zagadnienie{AM3-Ć1, 03.10.25}{}
+{
+    \begin{tcolorbox}[mybox]
+    \subsubsection*{Przestrzzeń topologiczna}
+    \subsubsection*{Pytanie 1.}
+    \end{tcolorbox}
+    \subsubsection*{Zadanie 1.}
+    \begin{tcolorbox}[mybox]
+    \subsubsection*{Uwaga}
+    \subsubsection*{Przestrzeń metryczna}
+    \subsubsection*{Baza topologii}
+    \end{tcolorbox}
+    \subsubsection*{Zadanie 2.}
+}
+\zagadnienie{AM3-Ć2, 07.10.25}{}
+{
+    \begin{tcolorbox}[mybox]
+    \subsubsection*{Wnętrze}
+    \subsubsection*{Domknięcie}
+    \end{tcolorbox}
+    \subsubsection*{Zadanie 3.}
+    \subsubsection*{Zadanie 4.}
+    \begin{tcolorbox}[mybox]
+    \subsubsection*{Brzeg}
+    \subsubsection*{Tw. o trójpodziale}
+    \subsubsection*{Przykład w $\mathbb{R}$}
+    \subsubsection*{Topologia indukowana}
+    \subsubsection*{Zbiory graniczne}
+    \subsubsection*{Przykłady}
+    \subsubsection*{Przestrzeń Hausdorffa}
+    \end{tcolorbox}
+}
+\zagadnienie{AM3-Ć3, 10.10.25}{}
+{
+    \subsubsection*{Zadanie 5.}
+    \subsubsection*{Zadanie 6.}
+    \subsubsection*{Zadanie 7.}
+    \subsubsection*{Zadanie 8.}
+    \subsubsection*{Zadanie 9.}
+}
+\zagadnienie{AM3-Ć4, 14.10.25}{}
+{
+    \subsubsection*{Zadanie 10.}
+    \subsubsection*{Zadanie 11.}
+    \subsubsection*{Zadanie 12.}
+    \subsubsection*{Zadanie 13.}
+    \subsubsection*{Zadanie 14.}
+}
+\zagadnienie{AM3-Ć5, 17.10.25}{}
+{
+    \subsubsection*{Zadanie 15.}
+    \subsubsection*{Zadanie 16.}
+    \subsubsection*{Zadanie 17.}
+    \subsubsection*{Zadanie 18.}
+}
+\zagadnienie{AM3-Ć6, 21.10.25}{}
 {
 }
+\zagadnienie{AM3-Ć7, 24.10.25}{}
+{
+
+}
+
 
 
 \end{document}
