--- a/RR/RR-Ć-skrypt/RR-Ć-skrypt.tex
+++ b/RR/RR-Ć-skrypt/RR-Ć-skrypt.tex
@@ -53,6 +53,13 @@
     \begin{tcolorbox}[mybox]
     \subsubsection*{Twierdzenie o funkcji uwikłanej}
     \begin{quote}
+        1) pochodna ciągła \\
+        2) \(\exists (x_0, y_0)\; F(x_0, y_0) = 0\) \\
+        3) \(F_y{(x_0, y_0)} \neq 0\) \\
+        \(\Rightarrow \exists y(x)\) – różniczkowalna, taka że \(F(x, y(x)) = 0\) \\
+        \[
+        y'(x) = -\frac{F_x(x, y(x))}{F_y(x, y(x))}
+        \]
     \end{quote}
     \end{tcolorbox}
 
